--- a/index.html
+++ b/index.html
@@ -18,20 +18,26 @@
   <script src="js/libs/modernizr-1.6.min.js"></script>
 </head>
 <body lang="en">
+  <!-- templates -->
+  <script id="camera" type="text/html">
+    <li id="{{ htmlId }}"><span class="name">{{ name }}</span> <span>{{ description }} ({{ coordinates }})</span></li>
+  </script>
+
   <div id="container">
-    <header>
-    </header>
+    <header></header>
 
-    <div id="main" role="main">
-    </div>
+    <div id="main" role="main"></div>
 
-    <footer>
-    </footer>
+    <footer></footer>
   </div> <!--! end of #container -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.5.0.js"%3E%3C/script%3E'))</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/mylibs/underscore.js"></script>
+  <script src="js/mylibs/backbone.js"></script>
+  <script src="js/mylibs/ICanHaz.js"></script>
+  <script src="js/artimis/models/camera.js"></script>
+  <script src="js/artimis/collections/cameras.js"></script>
+  <script src="js/artimis/application.js"></script>
   <!--[if lt IE 7 ]>
     <script src="js/libs/dd_belatedpng.js"></script>
     <script>DD_belatedPNG.fix('img, .png_bg'); // Fix any <img> or .png_bg bg-images. Also, please read goo.gl/mZiyb </script>
